<resources>
    <string name="app_name">Map&amp;gon</string>
    <string name="Modo_Servidor">Server Mode</string>
    <string name="Modo_Cliente">Client Mode</string>
    <string name="TopJogadores">Scoreboard</string>
    <string name="Sobre">About</string>
    <string name="Conectar">Connect</string>
    <string name="InsiraIP">Insert the IP address</string>
    <string name="Amov">Aplições Móveis</string>
    <string name="FimJogo">Game Over</string>
    <string name="Objetivo">You didnt make the polygon</string>
    <string name="TempoAcabou">The time has ended</string>
    <string name="CoordenadasInicias">Inicial  coordinates</string>
    <string name="ConstEquipa">Team</string>
    <string name="ServerIP">Server IP:</string>
    <string name="PararCriacao">Close team</string>
    <string name="IdEquipa">Team ID:</string>
    <string name="NomeEquipa">Team name</string>
    <string name="InsiraNome">Insert team name:</string>
    <string name="Comecar">Start</string>
    <string name="Localizacaojog">Players location</string>
    <string name="Distanciajog">Players distance</string>
    <string name="TempoRes">Remaining time</string>
    <string name="FinalJogo">End game</string>
    <string name="AngulosJog">Angles between players</string>
    <string name="Poligonos">Polygons</string>
    <string name="Data">Date</string>
    <string name="Hora">Hour</string>
    <string name="DistanciaMediajog">Average distance between players</string>
    <string name="AreaPol">Polygon area</string>
    <string name="msg_ip_address">Server IP Address: %s \nWaiting for a Client...</string>
    <string name="error_address">Address not Recognized</string>
    <string name="btn_emulator">Emulador</string>
    <string name="button_cancel">Cancelar</string>
</resources>