<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atividades.DefineEquipa">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Modo_Servidor"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="52sp"
                android:textColor="@color/tijolo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/IdEquipa"
                    android:textColor="@color/castanho"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/TeamIDText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|start"
                    android:text="@string/NomeEquipa"
                    android:textColor="@color/castanho"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/nomeEquipa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/InsiraNome"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/ConstEquipa"
                    android:textColor="@color/castanho"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <GridView
                    android:id="@+id/grelha_JogadoresDefineEquipa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="1"
                    android:verticalSpacing="16dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">
                <Button
                    android:id="@+id/btnDefine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Comecar"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:backgroundTint="@color/tijolo"
                    android:onClick="onbtnStart"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>