<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:padding="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Modo_Servidor"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/tijolo"
                    android:onClick="onServerMode"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Modo_Cliente"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/tijolo"
                    android:onClick="onClientMode"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TopJogadores"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/tijolo"
                    android:onClick="onScoreboard"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Sobre"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/tijolo"
                    android:onClick="onAbout"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>